--- a/CwnGraph_asis_v4.ipynb
+++ b/CwnGraph_asis_v4.ipynb
@@ -9,16 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "import pickle\n",
     "import re\n",
-    "from CwnGraph import CwnBase, CwnAnnotator\n",
+    "from CwnGraph import CwnBase, CwnAnnotator, CwnSense\n",
     "from CwnGraph import CwnRelationType\n",
     "from interactive_searcher import searchByLemma, compareLemma, exploreSense, sense_id\n",
     "\n",
@@ -208,8 +217,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 5. 檢視一個 sense 的所有 relations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CwnSense(\"09103201\", cwn).relations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Question: search sense directly by id?  \n",
     "Goal: to access sense relations of a sense by its id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query sense relations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1. 了\n",
+      "\t  1) 04005201   pos: Di       def: 時態標記。表事件的結束或完整性，置於動詞後。\n",
+      "\t\t1) 民族心底的長城情結一直不敢恭維，讀<了>康熙這段話，簡直是找到了一個遠年知音。\n",
+      "\t\t2) 二十世紀末的臺灣藝術，象徵<了>藝術家心中的熱情與詩性，表達了他對土地的熱愛，他呈現了臺灣大地之美。\n",
+      "\t\t3) 各型車床、銑床、原料、工具略顯緊迫的排列在尚待進一步整理的狹長空間裡，何先生就在這裡，渡過<了>八年與機具日日為伍的時光。\n",
+      "\n",
+      "\t  2) 04005202   pos: T        def: 表示變化或出現新的情況，置於句末或句中停頓處。\n",
+      "\t\t1) 搶奪去了能夠弄好倒也罷了，偏偏越弄越糟，最後幾乎讓外國人給瓜分<了>。\n",
+      "\t\t2) 這一決定如果不是有意諷刺，那也足以說明，這次請願活動是真正的慘敗<了>。\n",
+      "\t\t3) 好幾次她走得太過出神<了>，在狹窄卻又車來人往的巷街上，和急駛的汽車擦身而過。\n",
+      "\t\t4) 選擇的時刻來臨<了>，起初貪心而天真的我以為這可以是道複選題，我甚至安排她們見面。\n",
+      "\n",
+      "\n",
+      "2. 了\n",
+      "\t  1) 05003601   pos: VJ       def: 結束。\n",
+      "\t\t1) 根據「抗拒改造、加重懲治」的原則將其改判成死刑，打算將他一斃<了>之，免得他多事。\n",
+      "\t\t2) 沒想到輻射公寓的問題還未<了>，最近又發生聯成鐵工廠遺失有害人體的放射核種銫一三七，幸好有人檢舉。\n",
+      "\t\t3) 曾柔鶯表示這並不代表國人只要拿著大把鈔票前去，就萬事<了>，整體的規劃及人文法律的認知，對事業的成敗非常重要。\n",
+      "\n",
+      "\t  2) 05003602   pos: Di       def: 時態標記。表前述對象對該事件或動作有實現的能力。\n",
+      "\t\t1) 聚集臺北的大陸人，不論如何張致做作，踵事增華，掩飾不<了>他們的空虛。\n",
+      "\t\t2) 那幫窮酸博士是幹不了你這份活兒，可是人家讀了博士能幹的事，你也幹不<了>。甭博士長博士短的，有什麼了不起的！\n",
+      "\t\t3) 這一來很多人因此被指為「反革命」，進了牢房。高級幹部如河北省委副書記薛迅就被指為「過不<了>社會主義關」而被撤了職。\n",
+      "\n",
+      "\n",
+      "3. 了\n",
+      "\t  1) 05003701   pos: VJ       def: 清楚地知道。\n",
+      "\t\t1) 我<了>他為什麼要這樣做的原因，其實，他也是有很多說不出的苦衷。\n",
+      "\t\t2) 生活一切明瞭，也就是善覺。明是明白，<了>是瞭解。待人接物，對任何人都能了解、能明白。\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "searchByLemma(\"了\", cwn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('is_synset', <CwnSense[syn_017878](----): >)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CwnSense(\"04005202\", cwn).relations"
    ]
   }
  ],
