New folder: yongfu/

--- a/test_merging.ipynb
+++ b/test_merging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "from CwnGraph import CwnBase, CwnAnnotator\n",
+    "import pandas as pd\n",
+    "from CwnGraph import CwnBase, CwnAnnotator, CwnSense\n",
     "from CwnGraph import CwnRelationType\n",
     "cwn = CwnBase()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set([1, 1, 2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing Annotation Conflict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lexical relations\n",
+    "#https://docs.google.com/spreadsheets/d/1vzDlokmrsXMdGBaoSFR9lC1F9BlN8qHR6b5YDMMvv7Y/export?format=csv&gid=1660345856\n",
+    "# New sense\n",
+    "#https://docs.google.com/spreadsheets/d/1vzDlokmrsXMdGBaoSFR9lC1F9BlN8qHR6b5YDMMvv7Y/export?format=csv&gid=1399166433\n",
+    "# New lemma\n",
+    "#https://docs.google.com/spreadsheets/d/1vzDlokmrsXMdGBaoSFR9lC1F9BlN8qHR6b5YDMMvv7Y/export?format=csv&gid=823487049\n",
+    "#import requests\n",
+    "\n",
+    "#url = 'https://docs.google.com/spreadsheets/d/1vzDlokmrsXMdGBaoSFR9lC1F9BlN8qHR6b5YDMMvv7Y/export?format=csv&gid=1660345856'\n",
+    "#rq = requests.get(url)\n",
+    "data_url = 'http://bit.ly/2cLzoxH'\n",
+    "# read data from url as pandas dataframe\n",
+    "gapminder = pd.read_csv(data_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Taiwan'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gapminder[(gapminder['year'] == 1957) & (gapminder['continent'] == \"Asia\") & (gapminder['country'] == \"Taiwan\")]['country'].values[0]\n",
+    "#gapminder\n",
+    "#str(gapminder[(gapminder['year'] == 1957) & (gapminder['continent'] == \"Asia\")])\n",
+    "#gapminder.iloc[[1,23]]\n",
+    "#gapminder.to_string().split('\\n')"
    ]
   },
   {
