--- a/CwnGraph_asis_v4.ipynb
+++ b/CwnGraph_asis_v4.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -120,7 +111,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "1. 了\n",
+      "1. 了 040052\n",
       "\t  1) 04005201   pos: Di       def: 時態標記。表事件的結束或完整性，置於動詞後。\n",
       "\t\t1) 民族心底的長城情結一直不敢恭維，讀<了>康熙這段話，簡直是找到了一個遠年知音。\n",
       "\t\t2) 二十世紀末的臺灣藝術，象徵<了>藝術家心中的熱情與詩性，表達了他對土地的熱愛，他呈現了臺灣大地之美。\n",
@@ -133,7 +124,7 @@
       "\t\t4) 選擇的時刻來臨<了>，起初貪心而天真的我以為這可以是道複選題，我甚至安排她們見面。\n",
       "\n",
       "\n",
-      "2. 了\n",
+      "2. 了 050036\n",
       "\t  1) 05003601   pos: VJ       def: 結束。\n",
       "\t\t1) 根據「抗拒改造、加重懲治」的原則將其改判成死刑，打算將他一斃<了>之，免得他多事。\n",
       "\t\t2) 沒想到輻射公寓的問題還未<了>，最近又發生聯成鐵工廠遺失有害人體的放射核種銫一三七，幸好有人檢舉。\n",
@@ -145,7 +136,7 @@
       "\t\t3) 這一來很多人因此被指為「反革命」，進了牢房。高級幹部如河北省委副書記薛迅就被指為「過不<了>社會主義關」而被撤了職。\n",
       "\n",
       "\n",
-      "3. 了\n",
+      "3. 了 050037\n",
       "\t  1) 05003701   pos: VJ       def: 清楚地知道。\n",
       "\t\t1) 我<了>他為什麼要這樣做的原因，其實，他也是有很多說不出的苦衷。\n",
       "\t\t2) 生活一切明瞭，也就是善覺。明是明白，<了>是瞭解。待人接物，對任何人都能了解、能明白。\n",
@@ -230,6 +221,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -267,23 +265,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15"
+       "<CwnSense[13207901](器官): 生物體內具有特定功能的組織單位。>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(CwnSense(\"04002001\", cwn).relations)"
+    "CwnSense(\"13207901\", cwn)#.definition"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
