--- a/yongfu/test_merging.ipynb
+++ b/yongfu/test_merging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,13 +34,87 @@
        "2"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(set([1, 1, 2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs = dict()\n",
+    "sheet_id = ['1660345856', '1399166433', '823487049']\n",
+    "sheet_name = ['lex_rel', 'sense', 'lemma']\n",
+    "for sheet, gid in zip(sheet_name, sheet_id):\n",
+    "    url = f\"https://docs.google.com/spreadsheets/d/1vzDlokmrsXMdGBaoSFR9lC1F9BlN8qHR6b5YDMMvv7Y/export?format=csv&gid={gid}\"\n",
+    "    df = pd.read_csv(url, dtype='str').dropna()\n",
+    "    dfs[sheet] = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sid_src</th>\n",
+       "      <th>sid_tgt</th>\n",
+       "      <th>relation_type</th>\n",
+       "      <th>action</th>\n",
+       "      <th>annot.</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [sid_src, sid_tgt, relation_type, action, annot.]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import check\n",
+    "\n",
+    "#check.find_duplicates(dfs['lex_rel'], ['sid_src', 'sid_tgt'])\n",
+    "#def find_duplicates(df, cols=['sid_src', 'sid_tgt']):\n",
+    "#dup_idx = dfs['lex_rel'].duplicated(subset=['sid_src', 'sid_tgt'], keep=False)\n",
+    "    #return(df[dup_idx])\n",
+    "#dfs['lex_rel'].columns#.duplicated(subset=['sid_src', 'sid_tgt'])"
    ]
   },
   {
