work on cwn_checker.py

--- a/notebooks/annot-test.ipynb
+++ b/notebooks/annot-test.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "<CwnAnnotator: cwn_edit_200114113903> (1597 Edits, 2 Deletes)"
+       "<CwnAnnotator: cwn_edit_200114165741> (1597 Edits, 2 Deletes)"
       ]
      },
      "execution_count": 7,
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,11 +122,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "synonym_map = checker.check_synset_definitions()"
+    "ret = checker.check_synset_definitions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> e:\\kyle\\cwngraph\\cwngraph\\cwn_checker.py(58)check_synset_consistency()\n",
+      "-> grp_iter = groupby(senses, lambda x: x.definition)\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "(Pdb)  senses\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "(Pdb)  synset_x\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<CwnSynset[syn_016212]: 當代臺灣政治人物，立法院院長(1999年起)。>\n"
+     ]
+    }
+   ],
+   "source": [
+    "ret = checker.check_synset_consistency()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('一切、全部。',\n",
+       "  [<CwnSense[03040701](所有): 一切、全部。>, <CwnSense[04080202](諸): 一切、全部。>])]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ret"
    ]
   },
   {
