working on cwn_checker.py

--- a/notebooks/annot-test.ipynb
+++ b/notebooks/annot-test.ipynb
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "<CwnAnnotator: cwn_edit_200114165741> (1597 Edits, 2 Deletes)"
+       "<CwnAnnotator: cwn_edit_200117171659> (1597 Edits, 2 Deletes)"
       ]
      },
      "execution_count": 7,
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +194,35 @@
    ],
    "source": [
     "ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ret = checker.check_inverse_relations()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10706"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(checker.suggestions)"
    ]
   },
   {
