--- a/sphinx_doc/CwnQuery_doc.ipynb
+++ b/sphinx_doc/CwnQuery_doc.ipynb
@@ -4,42 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cwn Graph Query"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "from CwnGraph import CwnBase, CwnAnnotator\n",
-    "from CwnGraph import CwnRelationType"
+    "This is a quick guide to using `CwnGraph` API to query and navigate [Chinese Wordnet](http://lope.linguistics.ntu.edu.tw/cwn2/)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CwnGraph can be installed as a package.\n",
-    "When run first time, prepare cwn_graph.pyobj and install with install_cwn().\n",
-    "After installation, CwnGraph use CWN data in its own home directory, regardless of working directory."
+    "## 1. Installation\n",
+    "\n",
+    "When using `CwnGraph` for the **first time**,\n",
+    "you would need to download and install the data for cwn (`cwn_graph.pyobj`) with `CwnBase.install_cwn()`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -51,130 +31,410 @@
     }
    ],
    "source": [
-    "cwn = CwnBase.install_cwn(\"data/cwn_graph.pyobj\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cwn = CwnBase()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'5d536f'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# this line may take a few seconds\n",
-    "cwn.get_hash()"
+    "from pprint import pprint\n",
+    "from CwnGraph import CwnBase\n",
+    "CwnBase.install_cwn(\"data/cwn_graph.pyobj\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Basic Query"
+    "## 2. Load CWN data\n",
+    "\n",
+    "To query CWN, the first step is to initialize the cwn data as an object with `CwnBase()`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<CwnLemma: 電腦_1>, <CwnLemma: 電腦化_1>, <CwnLemma: 微電腦_1>]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lemmas = cwn.find_lemma(\"電腦\")\n",
-    "print(lemmas)"
+    "from CwnGraph import CwnBase\n",
+    "cwn = CwnBase()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<CwnSense[06613601](電腦): 一種資料處理裝置，能自動接受並儲存、處理輸入的資料，然後經由一組預先存放在機器內的指令逐步引導下產生輸出結果。>, <CwnSense[06613602](電腦): 研究或操作電腦的知識。>, <CwnSense[06613603](電腦): 比喻計算或記憶能力很強的人。>]\n"
-     ]
-    }
-   ],
    "source": [
-    "lemma0 = lemmas[0]\n",
-    "senses = lemma0.senses\n",
-    "print(senses)"
+    "Now, you can start querying CWN with the methods provided by `CwnBase`!"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<CwnSense[06613601](電腦): 一種資料處理裝置，能自動接受並儲存、處理輸入的資料，然後經由一組預先存放在機器內的指令逐步引導下產生輸出結果。>\n",
-      "[('has_facet', <CwnFacet[0661360101](電腦): 普通名詞。電腦的功能，通常包括程式、軟體等。>), ('has_facet', <CwnFacet[0661360102](電腦): 普通名詞。電腦的實體，特別指外表，通常包括螢幕、鍵盤、主機等。>), ('is_synset', <CwnSense[syn_004128](----): >), ('hypernym', <CwnSense[06582901](工具): 工作時必須使用的具有特定功能的器具。>), ('hyponym(rev)', <CwnSense[06582901](工具): 工作時必須使用的具有特定功能的器具。>)]\n",
-      "--\n",
-      "<CwnSense[06613602](電腦): 研究或操作電腦的知識。>\n",
-      "[('is_synset', <CwnSense[syn_016365](----): >)]\n",
-      "--\n",
-      "<CwnSense[06613603](電腦): 比喻計算或記憶能力很強的人。>\n",
-      "[('is_synset', <CwnSense[syn_014518](----): >)]\n",
-      "--\n"
-     ]
-    }
-   ],
    "source": [
-    "for sense_x in senses:\n",
-    "    print(sense_x)\n",
-    "    print(sense_x.relations)\n",
-    "    print(\"--\")"
+    "## 3. Basic Query"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Query senses from lemmas\n",
+    "\n",
+    "To locate a particular sense in CWN, one approach is to first find the lemma associated with that sense.\n",
+    "You can use `CwnBase.find_lemma()` to search for lemmas containing the given RegEx pattern passed as the argument. The example below searches for lemmas containing the string `\"電腦\"`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'node_type': 'sense',\n",
-       " 'pos': 'Na',\n",
-       " 'examples': ['小朋友都覺得放假好煩，比上學更累，他們要學<電腦>，上補習班。\\r\\n',\n",
-       "  '這樣規定豈不是加重學生的負擔？還不如學<電腦>或英文更有實效。\\r\\n',\n",
-       "  '陶公我在高一時就認為他<電腦>超強的，但是現在我認為muscle你也不差。\\r\\n'],\n",
-       " 'domain': '',\n",
-       " 'annot': {},\n",
-       " 'def': '研究或操作電腦的知識。'}"
+       "[<CwnLemma: 電腦_1>, <CwnLemma: 電腦化_1>, <CwnLemma: 微電腦_1>]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lemmas = cwn.find_lemma(\"電腦\")\n",
+    "lemmas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This returns a list of matching lemmas (`CwnLemma`).\n",
+    "\n",
+    "Each lemma may itself contain other informations, for example, a lemma (e.g. `電腦_1`) may has several senses:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<CwnSense[06613601](電腦): 一種資料處理裝置，能自動接受並儲存、處理輸入的資料，然後經由一組預先存放在機器內的指令逐步引導下產生輸出結果。>,\n",
+       " <CwnSense[06613602](電腦): 研究或操作電腦的知識。>,\n",
+       " <CwnSense[06613603](電腦): 比喻計算或記憶能力很強的人。>]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senses = lemmas[0].senses\n",
+    "senses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Sense\n",
+    "\n",
+    "A sense could have several relations with other types of data, e.g. facets of the sense, other senses, etc.\n",
+    "\n",
+    "#### 3.2.1 Relations\n",
+    "\n",
+    "With the `relations` attribute of a sense, one can find its **sense relations** to other entities, represented as a list of tuple, with each tuple representing a relation (an edge with the first element as the *edgetype*, the second as *the other node*, and the third as the *direction*)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('has_facet', <CwnFacet[0661360101](電腦): 普通名詞。電腦的功能，通常包括程式、軟體等。>, 'forward'),\n",
+       " ('has_facet',\n",
+       "  <CwnFacet[0661360102](電腦): 普通名詞。電腦的實體，特別指外表，通常包括螢幕、鍵盤、主機等。>,\n",
+       "  'forward'),\n",
+       " ('is_synset',\n",
+       "  <CwnSynset[syn_004128]: 一種資料處理裝置，能自動接受並儲存、處理輸入的資料，然後經由一組預先存放在機器內的指令逐步引導下產生輸出結果。>,\n",
+       "  'forward'),\n",
+       " ('hypernym', <CwnSense[06582901](工具): 工作時必須使用的具有特定功能的器具。>, 'forward'),\n",
+       " ('hyponym', <CwnSense[06582901](工具): 工作時必須使用的具有特定功能的器具。>, 'reversed')]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "computer = senses[0]\n",
+    "computer.relations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.2.2 Facets\n",
+    "\n",
+    "Sometimes, a sense may have multiple facets with slightly different meanings:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<CwnFacet[0661360101](電腦): 普通名詞。電腦的功能，通常包括程式、軟體等。>,\n",
+       " <CwnFacet[0661360102](電腦): 普通名詞。電腦的實體，特別指外表，通常包括螢幕、鍵盤、主機等。>]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "computer.facets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "while other senses may not have facets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<CwnSense[06613602](電腦): 研究或操作電腦的知識。>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senses[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This sense has no facets\n",
+    "senses[1].facets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.2.3 Example sentences\n",
+    "The example sentences of **a sense** can be retrieved with the `examples` attribute:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<CwnSense[06613602](電腦): 研究或操作電腦的知識。>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senses[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['小朋友都覺得放假好煩，比上學更累，他們要學<電腦>，上補習班。',\n",
+       " '這樣規定豈不是加重學生的負擔？還不如學<電腦>或英文更有實效。',\n",
+       " '陶公我在高一時就認為他<電腦>超強的，但是現在我認為muscle你也不差。']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senses[1].examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " When a sense has facets, one need to **first retrieve a particular facet** to get the examples of this sense facet:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<CwnFacet[0661360101](電腦): 普通名詞。電腦的功能，通常包括程式、軟體等。>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "computer.facets[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['走遍大街小巷，如何選一台適合自己的個人<電腦>是一大問題。',\n",
+       " '健保局總局與六個分局的<電腦>軟硬體與通信費用應限定在十億以內。',\n",
+       " '一種以藝術大師命名的<電腦>病毒，每年固定在大師誕辰三月六日發作，摧毀被感染<電腦>的所有硬碟檔案。']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "computer.facets[0].examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, it may be tedious to check whether a sense has facets before retrieving the examples.\n",
+    "One could use `CwnSense.all_examples()` to retrieve **all examples of a sense** whether or not this sense has facets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Can't retrieve examples for this sense \n",
+    "# because they are stored under facets\n",
+    "computer.examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['走遍大街小巷，如何選一台適合自己的個人<電腦>是一大問題。',\n",
+       " '健保局總局與六個分局的<電腦>軟硬體與通信費用應限定在十億以內。',\n",
+       " '一種以藝術大師命名的<電腦>病毒，每年固定在大師誕辰三月六日發作，摧毀被感染<電腦>的所有硬碟檔案。',\n",
+       " '大家會在這兩天把<電腦>搬進宿舍嗎？',\n",
+       " '你買這麼漂亮的新<電腦>，發財了喔？',\n",
+       " '因為<電腦>可以吸磁鐵，所以我就貼了很多磁鐵，但是有人說貼磁鐵的話會影響到主機，這是真的嗎？']"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This find all examples of a sense \n",
+    "# regardless of where the examples are stored\n",
+    "computer.all_examples()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.2.4 Other data of a sense\n",
+    "Other data of a sense could be retrieved with the `data()` method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'annot': {},\n",
+       " 'def': '研究或操作電腦的知識。',\n",
+       " 'domain': '',\n",
+       " 'examples': ['小朋友都覺得放假好煩，比上學更累，他們要學<電腦>，上補習班。',\n",
+       "  '這樣規定豈不是加重學生的負擔？還不如學<電腦>或英文更有實效。',\n",
+       "  '陶公我在高一時就認為他<電腦>超強的，但是現在我認為muscle你也不差。'],\n",
+       " 'node_type': 'sense',\n",
+       " 'pos': 'Na'}"
+      ]
+     },
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,8 +444,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 Other approaches to query senses\n",
+    "\n",
+    "`CwnBase` provides ways to search for senses **directly** with `CwnBase.find_senses()`. This method searches for senses with lemmas, sense definitions, or example sentences that match the given RegEx patterns. The matched senses are returned as a list of senses."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +472,7 @@
        " <CwnSense[07021601](車): 象棋遊戲中所使用的棋子之一，走直線。>]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +503,7 @@
        " <CwnSense[09004101](汽): 在陸地上行駛的有四個以上的輪子的運輸工具。>]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -255,84 +524,13 @@
        " <CwnSense[06665203](車): 開放式用於乘載或放置物品的有輪子的工具。>]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cwn.find_senses(examples=\"學步車\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<CwnFacet[0506490101](花費): 消耗後述時間或能量。>,\n",
-       " <CwnFacet[0506490102](花費): 付出金錢。>,\n",
-       " <CwnFacet[0506490103](花費): 付出金錢。>]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spend_senses = cwn.find_senses(lemma=\"花費\")\n",
-    "spend_senses[0].facets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spend_senses[0].examples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['總統對中油努力探勘油源所<花費>的心力，表示肯定。',\n",
-       " '因為資訊實在太多，即使走馬看花，也要<花費>不少時間。',\n",
-       " '薄薄的一張證明，又不需要<花費>很大人力，卻要索價三百元。',\n",
-       " '第一階段選擇場址評估約需<花費>一千五百萬元。',\n",
-       " 'IBM相當重視研究開發，每年<花費>在此方面的經費不下數十億美元。',\n",
-       " '整體經營與制度化，導致包括交通、住宿及其他<花費>的資金，大多未能流入當地社會。',\n",
-       " '職業訓練是投資，而不是<花費>。',\n",
-       " '只要有興趣，就不會在乎金錢上的<花費>。',\n",
-       " '計有卅八宗個案，<花費>金額為四十六萬五千五百廿五元。']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spend_senses[0].all_examples()"
    ]
   }
  ],
