--- a/notebooks/annot-test.ipynb
+++ b/notebooks/annot-test.ipynb
@@ -30,7 +30,7 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "from CwnGraph import CwnAnnotator, CwnBase, CwnRelationType\n",
-    "from CwnGraph import CwnChecker\n",
+    "from CwnGraph import CwnChecker, CwnCheckerSynset\n",
     "from CwnEdit.cwnedit_types import *\n",
     "from CwnEdit.transform import transform_dataframe\n"
    ]
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "<CwnAnnotator: cwn_edit_200117171659> (1597 Edits, 2 Deletes)"
+       "<CwnAnnotator: cwn_edit_200124220852> (1597 Edits, 2 Deletes)"
       ]
      },
      "execution_count": 7,
@@ -122,107 +122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ret = checker.check_synset_definitions()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> e:\\kyle\\cwngraph\\cwngraph\\cwn_checker.py(58)check_synset_consistency()\n",
-      "-> grp_iter = groupby(senses, lambda x: x.definition)\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "(Pdb)  senses\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[None]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "(Pdb)  synset_x\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<CwnSynset[syn_016212]: 當代臺灣政治人物，立法院院長(1999年起)。>\n"
-     ]
-    }
-   ],
-   "source": [
-    "ret = checker.check_synset_consistency()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('一切、全部。',\n",
-       "  [<CwnSense[03040701](所有): 一切、全部。>, <CwnSense[04080202](諸): 一切、全部。>])]"
+       "[]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ret"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ret = checker.check_inverse_relations()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10706"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(checker.suggestions)"
+    "checker.check()"
    ]
   },
   {
