--- a/notebooks/annot-test.ipynb
+++ b/notebooks/annot-test.ipynb
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "<CwnAnnotator: cwn_edit_200124220852> (1597 Edits, 2 Deletes)"
+       "<CwnAnnotator: cwn_edit_200125221807> (1597 Edits, 2 Deletes)"
       ]
      },
      "execution_count": 7,
@@ -113,25 +113,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Not a subclass of CwnCheckerBase\n"
+     ]
+    }
+   ],
    "source": [
-    "checker = CwnChecker(annot.V, annot.E)"
+    "checker = CwnChecker(annot.V, annot.E)\n",
+    "checker.add_checker(CwnCheckerSynset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "{}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
